{
  "version": 4,
  "terraform_version": "0.14.6",
  "serial": 197,
  "lineage": "3ca739da-5a6b-ff80-2568-2bd94221d424",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-06-01T08:44:36.050-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraformjlt/global/firewalls/terraform-firewall-allow-ssh",
            "log_config": [],
            "name": "terraform-firewall-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/terraformjlt/global/networks/terraform-network",
            "priority": 1000,
            "project": "terraformjlt",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraformjlt/global/firewalls/terraform-firewall-allow-ssh",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "ssh"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-06-01T08:44:36.336-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraformjlt/global/firewalls/terraform-firewall-allow-http",
            "log_config": [],
            "name": "terraform-firewall-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/terraformjlt/global/networks/terraform-network",
            "priority": 1000,
            "project": "terraformjlt",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraformjlt/global/firewalls/terraform-firewall-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "web"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "streamlit",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8501"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-06-01T08:44:36.356-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraformjlt/global/firewalls/terraform-firewall-streamlit",
            "log_config": [],
            "name": "terraform-firewall-streamlit",
            "network": "https://www.googleapis.com/compute/v1/projects/terraformjlt/global/networks/terraform-network",
            "priority": 1000,
            "project": "terraformjlt",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraformjlt/global/firewalls/terraform-firewall-streamlit",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "streamlit"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "streamlit"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20230510",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraformjlt/zones/us-west1-b/disks/instance-scheduler"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraformjlt/zones/us-west1-b/instances/instance-scheduler",
            "instance_id": "4755713983146951178",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "gIP-3AoVMMw=",
            "metadata_startup_script": "# Docker Installation Scripts for Ubuntu\n# From Docker website:\n# https://docs.docker.com/engine/install/ubuntu/\n\n# Update the apt package index and install packages to allow apt to use a repository over HTTPS:\n\nsudo apt-get update\nsudo apt-get install ca-certificates curl gnupg lsb-release\n\n# Add Docker's official GPG key\n\nsudo mkdir -p /etc/apt/keyrings\ncurl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/k [...]
            "name": "instance-scheduler",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.127.95.182",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraformjlt/global/networks/terraform-network",
                "network_ip": "10.138.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraformjlt/regions/us-west1/subnetworks/terraform-network",
                "subnetwork_project": "terraformjlt"
              }
            ],
            "project": "terraformjlt",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraformjlt/zones/us-west1-b/instances/instance-scheduler",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh",
              "streamlit",
              "web"
            ],
            "tags_fingerprint": "z8arOUimyow=",
            "zone": "us-west1-b"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/terraformjlt/global/networks/terraform-network",
            "mtu": 0,
            "name": "terraform-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "terraformjlt",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraformjlt/global/networks/terraform-network"
          }
        }
      ]
    }
  ]
}